Revert collect(Collectors.toList())