@@ -368,7 +368,7 @@ public class UserApiHandler extends ThreadedHttpRequestHandler {
 
     private boolean hasTrialCapacity() {
         if (! controller.system().isPublic()) return true;
-        var existing = controller.tenants().asList().stream().map(Tenant::name).toList();
+        var existing = controller.tenants().asList().stream().map(Tenant::name).collect(Collectors.toList());
         var trialTenants = controller.serviceRegistry().billingController().tenantsWithPlan(existing, PlanId.from("trial"));
         return maxTrialTenants.value() < 0 || trialTenants.size() < maxTrialTenants.value();
     }
